# substrate-dpos

./: Cargo.toml  DESIGN.md  INSTRUCTION.md  README.md
pallets/dpos/: Cargo.toml
pallets/dpos/src/: constants.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/dpos/src/tests/: delay_deregister_candidate.rs  delay_undelegate_candidate.rs  delegate_candidate.rs  deregister_candidate.rs  force_deregister_candidate.rs  force_undelegate_candidate.rs  mod.rs  register_as_candidate.rs  test_candidate_bond_less.rs  test_candidate_bond_more.rs  test_claim_reward.rs  test_delay_deregister_candidate.rs  test_delay_undelegate_candidate.rs  test_delegate_candidate.rs  test_force_deregister_candidate.rs  test_force_undelegate_candidate.rs  test_helpers.rs  test_register_as_candidate.rs  test_validator_election.rs  undelegate_candidate.rs  validator_election.rs
pallets/dpos/src/types/: candidate.rs  delay.rs  delegate.rs  epoch.rs  mod.rs  result.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
